tests/baselines/reference/systemModule8(strict=true).errors.txt
systemModule8.ts(1,12): error TS7005: Variable 'x' implicitly has an 'any' type.


==== systemModule8.ts (1 errors) ====
    export var x;
               ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
    x = 1;
    x++;
    x--;
    ++x;
    --x;
    x += 1;
    x -= 1;
    x *= 1;
    x /= 1;
    x |= 1;
    x &= 1;
    x + 1;
    x - 1;
    x & 1;
    x | 1;
    for (x = 5;;x++) {}
    for (x = 8;;x--) {}
    for (x = 15;;++x) {}
    for (x = 18;;--x) {}
    
    for (let x = 50;;) {}
    function foo() {
        x = 100;
    }
    
    export let [y] = [1];
    export const {a: z0, b: {c: z1}} = {a: true, b: {c: "123"}};
    for ([x] of [[1]]) {}